test/interaction/Issue4982.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?0 : _B_42 (f = f) (r = r) x _B_42 : Nat → Set [ at Issue4982.agda:25.41-42 ] _43 : Set [ at Issue4982.agda:25.13-68 ] _47 : apply Nat (λ v → _B_42 (f = f) (r = r) v) (λ z → ?0 (f = f) (r = r) (x = z)) 0 ≡ f [ at Issue4982.agda:25.13-69 ] _48 : R (apply Nat (λ v → _B_42 (f = f) (r = r) v) (λ z → ?0 (f = f) (r = r) (x = z)) 0) [ at Issue4982.agda:25.71-72 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: f x =< ?0 (f = f) (r = r) (x = 0) x : A (blocked on _46) ?0 (x = 0) = f : _B_42 0 (blocked on _46) _B_42 0 = A → A : Set (blocked on _B_42)" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-status-action "")
(agda2-info-action "*Goal type etc.*" "Goal: _B_42 (f = f) (r = r) x ———————————————————————————————————————————————————————————— x : Nat (not in scope) r : R f f : A → A ———— Constraints ——————————————————————————————————————————— f x₁ =< ?0 (f = f) (r = r) (x = 0) x₁ : A (blocked on _46) ?0 (x = 0) = f : _B_42 (f = f) (r = r) 0 (blocked on _46, belongs to problem 58) _47 := cong ((x : Nat) → _B_42 (f = f) (r = r) x) (_B_42 0) (λ z → ?0 (f = f) (r = r) (x = z)) (λ z → ?0 (f = f) (r = r) (x = z)) (λ f → f 0) (refl ((x : Nat) → _B_42 (f = f) (r = r) x) (λ z → ?0 (f = f) (r = r) (x = z))) (blocked on problem 58)" nil)
